@@ -19,6 +19,7 @@ then
 
 Options:
     list            display the list of available packages
+    download        download sources without build of packages
     install-ndk     copy unpacked Android NDK to target location
     install-sdk     copy unpacked Android SDK to target location
     install         copy all built extra libraries into Android NDK
@@ -29,8 +30,12 @@ Options:
 
 Examples:
     make android-ndk android-sdk
-    make openssl freeglut
     make
+    make all
+    make openssl freeglut
+    make \"download\"
+    make \"download all\"
+    make \"download ffmpeg sdl2\"
     make install
     make clean
     make distclean
@@ -111,6 +116,9 @@ then
         rm -rf "${MAIN_DIR}/src"
     fi
     exit 0
+elif [ "${1}" = "download" ]
+then
+    export DOWNLOAD_ONLY="true"
 fi
 
 # Make packages
@@ -119,29 +127,72 @@ BuildPackages()
 {
     if [ ! -z "${1}" ]
     then
-        for ARG in ${@}
-        do
-            if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
+        if [ "${1}" = "all" ]
+        then
+            BuildAllPackages
+        elif [ "${1}" = "download" ]
+        then
+            if [ "${2}" = "all" ]
             then
-                . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
+                BuildAllPackages
+            elif [ ! -z "${2}" ]
+            then
+                BuildPackagesFromOptions ${@}
             else
-                echo "Package ${ARG} does not exist!"
-                exit 1
+                BuildPackagesFromSettings
             fi
-        done
+        else
+            BuildPackagesFromOptions ${@}
+        fi
     elif [ ! -z "${LOCAL_PKG_LIST}" ]
     then
-        for ARG in ${LOCAL_PKG_LIST}
-        do
-            if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
-            then
-                . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
-            else
-                echo "Package ${ARG} does not exist!"
-                exit 1
-            fi
-        done
+        BuildPackagesFromSettings
     fi
+}
+
+BuildAllPackages()
+{
+    for ARG in $(${0} list)
+    do
+        IsOption "${ARG}" && continue || true
+        IsIgnoredPackage "${ARG}" && continue || true
+        if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
+        then
+            . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
+        else
+            echo "Package ${ARG} does not exist!"
+            exit 1
+        fi
+    done
+}
+
+BuildPackagesFromOptions()
+{
+    for ARG in ${@}
+    do
+        IsOption "${ARG}" && continue || true
+        if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
+        then
+            . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
+        else
+            echo "Package ${ARG} does not exist!"
+            exit 1
+        fi
+    done
+}
+
+BuildPackagesFromSettings()
+{
+    for ARG in ${LOCAL_PKG_LIST}
+    do
+        if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
+        then
+            . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
+        else
+            echo "Package ${ARG} does not exist!"
+            exit 1
+        fi
+    done
 }
 
 for PLATFORM in ${PLATFORMS}
