@@ -214,13 +214,6 @@ IsPkgVersionGreaterOrEqualTo()
         return 1
 }
 
-IsPkgInstalled()
-{
-    [ -e "${INST_DIR}/${PKG}" ] && \
-        return 0 || \
-        return 1
-}
-
 PrintSystemInfo()
 {
     echo "[target]   ${PLATFORM}_${ARCH}"
@@ -258,6 +251,81 @@ CheckPkgUrl()
     fi
 }
 
+FileSize()
+{
+    du ${@} | sed -ne "s;^\(.*\)\t.*$;\1;p"
+}
+
+IsOption()
+{
+    local OPTIONS_LIST="all clean distclean download help list version"
+    for OPT in ${OPTIONS_LIST}
+    do
+        [ "${1}" = "${OPT}" ] && return 0
+    done
+    return 1
+}
+
+IsDownloadOnly()
+{
+    [ "${DOWNLOAD_ONLY}" = "true" ] && \
+        return 0 || \
+        return 1
+}
+
+IsPkgInstalled()
+{
+    [ -e "${INST_DIR}/${PKG}" ] && \
+        return 0 || \
+        return 1
+}
+
+IsDownloadRequired()
+{
+    if IsBuildRequired || IsDownloadOnly
+    then
+        cd "${SRC_DIR}"
+        if [ -e "${PKG_FILE}" ]
+        then
+            if [ $(FileSize "${PKG_FILE}") = "0" ]
+            then
+                return 0
+            else
+                VerifyChecksum
+                return 1
+            fi
+        else
+            return 0
+        fi
+    fi
+
+    return 1
+}
+
+IsBuildRequired()
+{
+    IsDownloadOnly && return 1 || true
+    IsPkgInstalled && return 1 || true
+
+    [ "${DO_NOT_BUILD}" = "true" ] && \
+        return 1 || \
+        return 0
+}
+
+IsIgnoredPackage()
+{
+    local IGNORED_PKGS_LIST=""
+
+    for IGNORED_PKG in ${IGNORED_PKGS_LIST}
+    do
+        if [ "${IGNORED_PKG}" = "${1}" ]
+        then
+            return 0
+        fi
+    done
+    return 1
+}
+
 IsTarballCheckRequired()
 {
     local MUTABLE_TARBALLS_PKG_LIST=""
@@ -273,14 +341,29 @@ IsTarballCheckRequired()
     return 0
 }
 
+CheckSourcesAndDependencies()
+{
+    if IsBuildRequired || IsDownloadRequired
+    then
+        CheckDependencies
+
+        IsDownloadRequired && GetSources
+    fi
+}
+
 GetSources()
 {
-    [ "${1}" != "quiet" ] && PrintSystemInfo
-
     local WGET="wget -v -c --no-config --no-check-certificate --max-redirect=50"
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/tarball-download.log"
     mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${SRC_DIR}"
+    if [ -e "${PKG_FILE}" ]
+    then
+        if [ $(FileSize "${PKG_FILE}") = "0" ]
+        then
+            rm "${PKG_FILE}"
+        fi
+    fi
     if [ ! -e "${PKG_FILE}" ]
     then
         BeginDownload
@@ -288,6 +371,20 @@ GetSources()
         ${WGET} -o "${LOG_FILE}" -O "${PKG_FILE}" "${PKG_URL}"
         CheckFail "${LOG_FILE}"
     fi
+    if [ $(FileSize "${PKG_FILE}") = "0" ]
+    then
+        echo "Error! The size of downloaded tarball is equal to zero!"
+        echo "Check your Internet connection and accessibility of URL:"
+        echo "${PKG_URL}"
+        echo "Removing ${PKG_FILE}..."
+        rm "${PKG_FILE}"
+        exit 1
+    fi
+    VerifyChecksum
+}
+
+VerifyChecksum()
+{
     local TARBALL_CHECKSUM=$(openssl dgst -sha256 "${PKG_FILE}" 2>/dev/null | sed -n 's,^.*\([0-9a-f]\{64\}\)$,\1,p')
     if [ "${TARBALL_CHECKSUM}" != "${PKG_CHECKSUM}" ] && IsTarballCheckRequired
     then
@@ -299,8 +396,6 @@ GetSources()
         echo "rm \"${SRC_DIR}/${PKG_FILE}\""
         exit 1
     fi
-
-    BeginOfPkgBuild
 }
 
 UnpackSources()
@@ -326,6 +421,7 @@ UnpackSources()
         if [ -e "${PATCH_FILE}" ] || [ -h "${PATCH_FILE}" ]
         then
             local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/patch.log"
+            mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
             cd "${PKG_SRC_DIR}/${SUBDIR}"
             patch -p1 -i "${PATCH_FILE}" &> "${LOG_FILE}"
         fi
@@ -341,6 +437,7 @@ UnpackSources()
 PrepareBuild()
 {
     mkdir -p "${BUILD_DIR}/${PKG_SUBDIR}"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${LOG_DIR}/${PKG_SUBDIR}"
     rm -f configure.log make.log make-install.log
 
@@ -355,6 +452,7 @@ CopySrcAndPrepareBuild()
     else
         cp -afT "${PKG_SRC_DIR}/${PKG_SUBDIR_ORIG}" "${BUILD_DIR}/${PKG_SUBDIR}"
     fi
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${LOG_DIR}/${PKG_SUBDIR}"
     rm -f configure.log make.log make-install.log
 
@@ -364,6 +462,7 @@ CopySrcAndPrepareBuild()
 ConfigurePkg()
 {
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/configure.log"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${BUILD_DIR}/${PKG_SUBDIR}"
     if [ -z "${PKG_SUBDIR_ORIG}" ]
     then
@@ -377,6 +476,7 @@ ConfigurePkg()
 ConfigurePkgInBuildDir()
 {
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/configure.log"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${BUILD_DIR}/${PKG_SUBDIR}"
     ./configure ${@} &>> "${LOG_FILE}"
     CheckFail "${LOG_FILE}"
@@ -399,6 +499,7 @@ ConfigureAutotoolsProjectInBuildDir()
 ConfigureCmakeProject()
 {
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/configure.log"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${BUILD_DIR}/${PKG_SUBDIR}"
     if [ -z "${PKG_SUBDIR_ORIG}" ]
     then
@@ -412,6 +513,7 @@ ConfigureCmakeProject()
 BuildPkg()
 {
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/make.log"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${BUILD_DIR}/${PKG_SUBDIR}"
     make ${@} &>> "${LOG_FILE}"
     CheckFail "${LOG_FILE}"
@@ -420,6 +522,7 @@ BuildPkg()
 InstallPkg()
 {
     local LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/make-install.log"
+    mkdir -p "${LOG_DIR}/${PKG_SUBDIR}"
     cd "${BUILD_DIR}/${PKG_SUBDIR}"
     make ${@} &>> "${LOG_FILE}"
     CheckFail "${LOG_FILE}"
